#ifndef WARSZTATSAMOCHODOWY_RESOURCE_H
#define WARSZTATSAMOCHODOWY_RESOURCE_H


class Resource {
private:

public:
};


#endif //WARSZTATSAMOCHODOWY_RESOURCE_H